2004-07-02  George Peter Staplin <GeorgePS@XMission.com>

	* generic/tkEvent.c: Tk_HandleEvent was refactored to be more
	readable, and during this process two bugs were found.  
	1) Button 4 and 5 masks will now be synchronized with the
	 TkDisplay.
	2) ClientMessage handlers will use the proper last pointer rather
	 than writing to the last GenericHandler pointer.

	Thanks to Joe English for his help and encouragement, and DKF for
	review.

2004-07-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/place.n, doc/pack.n: Doc fixes. [Tcl Bug 983146]

2004-06-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#153 IMPLEMENTATION

	* generic/tkCmds.c (GetTopHierarchy): Modified from GetToplevel so
	* doc/winfo.n:			      that [winfo toplevel] does not
	assume that it is really working with toplevels. Occasionally this
	is important. Thanks to Neil McKay for this patch!

2004-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_WinfoObjCmd): refetch interp result obj for
	'winfo id' as it can change when making the window exist.

2004-06-26  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tkConsole.c (ConsoleDeleteProc): Set tsdPtr->gStdoutInterp
	to NULL when the console command is deleted [Bug 756840].  Also,
	added Tcl_Preserve/Tcl_Release for consoleInterp in InterpreterCmd
	in case it gets deleted during the calls to Tcl_GlobalEval and 
	Tcl_RecordAndEval.

2004-06-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/canvPs.test, etc: Use standard tcltest constraint names.

2004-06-19  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: autoconf 2.5 fixes in Darwin section.
	* unix/configure: autoconf-2.57

2004-06-17  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/constraints.tcl, tests/*.test: Systematization of test
	constraints so many common and basic constraints are defined once
	with a single name.

2004-06-16  Joe English  <jenglish@users.sourceforge.net>
